--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/webmidi@next/dist/iife/webmidi.iife.js"></script>
   <script src="./input-knobs.js"></script>
-  <script src="./VirtualSynth.js"></script>
-  <script src="./Montage_MODX.js"></script>
+  <script src="./virtualsynth.js"></script>
+  <script src="./montage_modx.js"></script>
   <script type="text/javascript">
 
     var myOutput;
