--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
       </div-->
       <div style="position: absolute; left: 0px; top: 0px; width:100%; height: 100%; display: flex; justify-content: center; align-items: center; background:gray">
         <div id="divControls" style="position:absolute; width:500px; height:200px; filter: blur(2px) opacity(50%);">
+
         </div>
+
+        <span style="position:absolute; top:10px;z-index:99;font-size:10pt;">GenX v0.1 - <a href="javascript:OpenAbout()">About GenX</a></span>
+
         <div id = "divMenu" class="Menu">
           <div style="visibility:inherit">
             <img src="./Logo.svg" style="position: absolute; top:10px; left:100px; width:200px; height:auto" />
@@ -52,6 +56,26 @@
           </div>
           <div id="frmInitError" style="visibility:hidden">
             <span id="txtInitError" style="position: absolute; top:120px; left:50px; width:300px; height:auto; font-size:12pt; text-align:center; color:red"></span>
+          </div>
+        </div>
+        <div id = "divAbout" class="Menu" style="visibility:hidden">
+          <div style="visibility:inherit">
+            <img src="./Logo.svg" style="position: absolute; top:10px; left:100px; width:200px; height:auto" />
+            <span style="position: absolute; top:50px; left:0px; width:100%; height:auto; font-size:12pt; color:#A19F9F; text-align:center">Montage/MODX Analogue Synth Interface</span>
+          </div>
+          <div style="visibility:inherit">
+            <span style="position: absolute; top:80px; left:30px; width:160pt; height:auto; font-size:8pt;">Copyright (c) 2022, Simon Fortenbacher</span>
+            <span style="position: absolute; top:98px; left:30px; width:160pt; height:auto; font-size:8pt;">Acknowledgements:</span>
+            <span style="position: absolute; top:98px; left:130px; width:176pt; height:auto; font-size:8pt;">g220kg for knob interaction code<a href="https://github.com/g200kg/input-knobs">Link</a></span>
+            <span style="position: absolute; top:112px; left:130px; width:160pt; height:auto; font-size:8pt;">Jean-Philippe Côté for WebMIDI <a href="https://github.com/djipco/webmidi">Link</a></span>
+            <span style="position: absolute; top:134px; left:30px; width:260pt; height:auto; font-size:7pt;">
+              The software is provided "as is", without warrany of any kind, express or implied,
+              including but not limited to the warranties of merchantability, fitness for a
+              particular purpose and noninfringement. In no event shall the author or
+              copyright holder be liable for any claim, damages or other liability, whether in
+              an action of contract, tort or otherwise, arising from, out of or in connection
+              with the software or the use or other dealings in the software.</span>
+            <button type-"button" style="position: absolute; top:210px; left:140px; width:120px; height:28px;" onclick="CloseAbout()">Close</button>
           </div>
         </div>
       </div>
@@ -170,16 +194,14 @@
         }
     }
 
-    function onEnabled2() {
+    function OpenAbout() {
+      var win = document.getElementById("divAbout");
+      win.style.visibility = "visible";
+    }
 
-      // Display available MIDI input devices
-      if (WebMidi.inputs.length < 1) {
-        document.body.innerHTML+= "No device detected.";
-      } else {
-        WebMidi.inputs.forEach((device, index) => {
-          document.body.innerHTML+= `${index}: ${device.name} <br>`;
-        });
-      }
+    function CloseAbout() {
+      var win = document.getElementById("divAbout");
+      win.style.visibility = "hidden";
     }
   </script>
 </html>
